# urania-backend

./: Dockerfile  backend.dockerfile
app/: .env  .gitignore  pyproject.toml
app/app/: backend_pre_start.py  main.py  tests_pre_start.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: auth.py  bpmanager.py  login.py  tasklist.py
app/app/core/: config.py  security.py
app/app/schemas/: __init__.py  user.py
app/app/test/: conftest.py
app/app/tests/: conftest.py
app/app/tests/api/api_v1/: test_auth.py  test_bpmanager.py  test_tasklist.py
app/app/tests/utils/: utils.py
